--- a/subpage.html
+++ b/subpage.html
@@ -9,11 +9,17 @@
     <title>Underside</title>
 </head>
 <body>
+
+    <header>
+        <nav>navigation</nav>
+    </header>
    
     <div class="moment-container">
-            
+            LOADER
     </div>
 
-
+    <footer>
+        Footer
+    </footer>
 </body>
 </html>
