--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <h1>Et Moments</h1>
+    <h1>Et Moments Gather</h1>
     <pre class="moment-debug"></pre>
 
     <h1>Alle Moments</h1>
