--- a/subpage.html
+++ b/subpage.html
@@ -5,17 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="src/js/index.js" defer type="module"></script>
-    <link href="/src/css/index.css" rel="stylesheet">
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <link href="/src/css/subpage.css" rel="stylesheet">
+    <link href="/src/css/loader.css" rel="stylesheet">
     <title>Underside</title>
 </head>
 <body>
 
     <header>
         <nav>navigation</nav>
+        <a class="subpage-HomePageLink" href="index.html">Frontpage</a>
     </header>
    
     <div class="moment-container">
-        LOADER
+        <lottie-player class="preloader test" src="https://assets6.lottiefiles.com/datafiles/F8PUZm7tlfP4fKL/data.json"  background="black"  speed="1" loop  autoplay></lottie-player>
     </div>
 
     <footer>
